--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,9 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+bin/
+include/
+pip-selfcheck.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -94,8 +97,14 @@ ENV/
 # Rope project settings
 .ropeproject
 
+# VSCode
+.vscode
+
 # mkdocs documentation
 /site
 
 # mypy
 .mypy_cache/
+
+# osx
+.DS_Store
